# v-museum-kutaisi

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  main.py  pyproject.toml
backend/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/exhibits/: admin.py  admin_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/exhibits/management/commands/: seed_met.py
backend/exhibits/migrations/: 0001_initial.py  0002_artifact_met_object_id.py  0003_alter_artifactturntableframe_angle_and_more.py  0004_alter_artifact_slug_alter_period_slug_and_more.py
frontend/: AGENTS.md  next.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/artifacts/: page.tsx
frontend/src/components/: HomeClient.tsx  RoomDetailClient.tsx
frontend/src/components/admin/: AdminArtifactCard.tsx  AdminRoomCard.tsx  CreateArtifactModal.tsx  CreateRoomModal.tsx  EditArtifactModal.tsx  TurntableUploader.tsx
frontend/src/components/artifact/: AboutSection.tsx  ArtifactCard.tsx  ArtifactFilters.tsx  ArtifactGallery.tsx  ArtifactMediaViewer.tsx  ArtifactMetadata.tsx  ArtifactVisual.tsx  AudioGuide.tsx  TurntableViewer.tsx
frontend/src/components/auth/: LoginModal.tsx
frontend/src/components/room/: RoomCard.tsx
frontend/src/components/ui/: BackLink.tsx  (+7 more)
frontend/src/lib/: adminApi.ts  api.ts  auth.ts  categories.ts  lang.ts  translations.ts  types.ts
(+2 files in other folders)
